--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@hookform/resolvers": "^2.9.10",
     "react-router-dom": "^6.8.0",
     "react-redux": "^8.0.5",
-    "@reduxjs/toolkit": "^1.9.2"
+    "@reduxjs/toolkit": "^1.9.2",
+    "history": "^5.3.0"
 
   },
   "scripts": {
