--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
+    "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.3",
+    "joi": "^17.7.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "axios": "^1.2.3",
     "react-hook-form": "^7.42.1",
-    "joi": "^17.7.0",
-    "@hookform/resolvers": "^2.9.10",
-    "react-router-dom": "^6.8.0",
     "react-redux": "^8.0.5",
-    "@reduxjs/toolkit": "^1.9.2"
-
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
+    "reactstrap": "^9.1.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.6",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
